Fill the TX buffer with the correct commands.

--- a/doc/RHD2216.md
+++ b/doc/RHD2216.md
@@ -1,10 +1,10 @@
 # RHD2216
 
 [Product Page](https://intantech.com/products_RHD2000.html) |
-[Datasheet](https://www.intantech.com/files/Intan_RHD2000_series_datasheet.pdf)
+[Data Sheet](https://www.intantech.com/files/Intan_RHD2000_series_datasheet.pdf)
 
 The RHD2216 is a low-power electrophysiology signal acquisition chip containing 16 differential input channels each with a low-noise amplifier.
-It also contains a multiplexed ADC to digitize the channels and an SPI interface for communication with an MCU.
+It also contains a multiplexed ADC to digitise the channels and an SPI interface for communication with an MCU.
 
 ## Data Readout
 
